--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,500,700&display=swap");
-html {
-  cursor: url(../images/mouse.png), auto;
-}
 
 body {
   font-family: "Noto Sans KR", sans-serif;
@@ -14,41 +11,33 @@ body {
   min-width: 1200px;
 }
 
-::selection {
-  background-color: #bbdcfb;
-}
-
 /* header */
 header {
+  z-index: 100;
+  width: 100%;
+  height: 60px;
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  height: 60px;
-  z-index: 100;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-header.active {
+.active {
   top: 0;
 }
 
 header > .container > nav {
+  width: 1200px;
+  height: 60px;
   position: absolute;
   left: 50%;
   top: 0;
   margin-left: -600px;
-  width: 1200px;
-  height: 60px;
-}
-
-header > .container > nav > .gnb {
-  widows: 1200px;
 }
 
 header > .container > nav > .gnb > li {
+  width: 228px;
   float: left;
-  width: 200px;
 }
 
 header > .container > nav > .gnb > li > a {
@@ -78,10 +67,10 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #home > .container {
-  position: relative;
   width: 1200px;
   height: 960px;
   margin: 0 auto;
+  position: relative;
 }
 
 #home > .container > p {
@@ -104,7 +93,7 @@ header > .container > nav > .gnb > li.on > a {
 #home > .container > h1 {
   position: absolute;
   left: 60px;
-  bottom: 210px;
+  top: 315px;
   font-weight: 700;
   font-size: 135px;
   color: #425a73;
@@ -113,34 +102,45 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #home > .container > h1 > .name {
-  position: absolute;
-  left: 300px;
-  bottom: 70px;
   display: block;
   width: 390px;
   height: 194px;
+  position: absolute;
+  left: 300px;
+  bottom: 70px;
   text-indent: -9999px;
   background-image: url(../images/name_peach.png);
 }
 
+#home > .container > .des {
+  font-size: 22px;
+  line-height: 2rem;
+  letter-spacing: -1.2px;
+  color: #555;
+  padding: 40px 0 0 10px;
+  position: absolute;
+  top: 550px;
+  left: 60px;
+}
+
 /* section - aboutme */
 #aboutme {
-  position: relative;
   width: 100%;
   height: 960px;
+  position: relative;
 }
 
 #aboutme > .content1-left {
-  float: left;
   height: 960px;
+  float: left;
 }
 
 #aboutme > .content1-left > h2 {
+  z-index: 10;
   position: absolute;
   top: 200px;
   left: 50%;
   margin-left: -540px;
-  z-index: 10;
   font-size: 70px;
   font-weight: 500;
   color: #425a73;
@@ -148,23 +148,24 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #aboutme > .content1-left > a {
+  display: block;
+  z-index: 20;
+  width: 358px;
+  height: 460px;
   position: absolute;
   top: 290px;
   left: 50%;
   margin-left: -540px;
-  z-index: 20;
-  display: block;
-  width: 358px;
-  height: 460px;
   text-align: justify;
 }
 
 #aboutme > .content1-left > a > p.img {
   width: 358px;
-  height: 430px;
+  height: 100vh;
   text-indent: -9999px;
-  background-image: url(../image/about-me2.png);
-  background-size: cover;
+  background-image: url(../image/myprofile.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 #aboutme > .content1-left > a > p.link {
@@ -178,22 +179,22 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #aboutme > .content1-left > .about_bg {
+  width: 700px;
+  height: 570px;
   position: absolute;
   left: 0;
   bottom: 150px;
-  width: 700px;
-  height: 570px;
   background-color: rgba(158, 213, 246, 0.3);
 }
 
 #aboutme > .content1-right {
+  width: 650px;
+  height: 430px;
   position: absolute;
   top: 290px;
   right: 50%;
   margin-right: -600px;
   float: left;
-  width: 650px;
-  height: 430px;
 }
 
 #aboutme > .content1-right > .profile {
@@ -202,17 +203,17 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #aboutme > .content1-right > .profile > ul {
-  position: relative;
   width: 650px;
   height: 280px;
+  position: relative;
 }
 
 #aboutme > .content1-right > .profile > ul > li {
+  width: 650px;
+  height: 280px;
   position: absolute;
   left: 0;
   top: 0;
-  width: 650px;
-  height: 280px;
   font-size: 16px;
   line-height: 2;
 }
@@ -222,11 +223,11 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #aboutme > .content1-right > .profile > button {
+  width: 21px;
+  height: 41px;
   outline: none;
   border: none;
   background: none;
-  width: 21px;
-  height: 41px;
   text-indent: -9999px;
   background-image: url(../image/arrow.png);
 }
@@ -258,16 +259,16 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #aboutme > .content1-right > .tag {
-  position: absolute;
-  bottom: 0px;
-  left: 0;
   width: 650px;
   height: 100px;
+  position: absolute;
+  bottom: -130px;
+  left: 0;
 }
 
 #aboutme > .content1-right > .tag > ul > li {
-  float: left;
   height: 40px;
+  float: left;
   line-height: 26px;
   margin-left: 15px;
   margin-bottom: 10px;
@@ -302,9 +303,9 @@ header > .container > nav > .gnb > li.on > a {
 
 /* section - skills */
 #skills {
-  width: 1200px;
   height: 960px;
   margin: 0 auto;
+  max-width: 1920px;
 }
 
 #skills > h2 {
@@ -321,114 +322,125 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #skills > .skill {
-  width: 585px;
+  display: flex;
+  max-width: 1920px;
   margin: 0 auto 150px;
+  justify-content: center;
 }
 
 #skills > .skill > li {
-  float: left;
-  height: 115px;
-  margin-left: 20px;
+  margin: 20px;
   text-indent: -9999px;
+  justify-content: center;
 }
 
 /* 수정필요함!!!!!!!!!!!!!!!!!!!!!!!1 */
 
 #skills > .skill > li:nth-child(1) {
-  width: 85px;
-  background-image: url(../image/skills_1.png);
+  width: 130px;
+  height: 144px;
+  background-image: url(../image/html-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .skill > li:nth-child(2) {
-  width: 85px;
-  background-image: url(../images/skills_2.png);
+  width: 145px;
+  height: 144px;
+  background-image: url(../image/css-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .skill > li:nth-child(3) {
-  width: 85px;
-  background-image: url(../images/skills_3.png);
+  width: 103px;
+  height: 144px;
+  background-image: url(../image/js-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .skill > li:nth-child(4) {
-  width: 270px;
-  background-image: url(../images/skills_4.png);
+  width: 139px;
+  height: 144px;
+  background-image: url(../image/jquery-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#skills > .skill > li:nth-child(5) {
+  width: 127px;
+  height: 144px;
+  background-image: url(../image/json-file.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .tool {
-  width: 645px;
-  margin: 0 auto;
+  display: flex;
+  max-width: 1920px;
+  margin: 0 auto 150px;
+  justify-content: center;
 }
 
 #skills > .tool > li {
-  float: left;
-  width: 75px;
-  height: 75px;
-  margin-left: 20px;
+  margin: 20px;
   text-indent: -9999px;
+  justify-content: center;
 }
 
 #skills > .tool > li:nth-child(1) {
-  margin-left: 0;
-  background-image: url(../images/skills_tool_1.png);
+  width: 144px;
+  height: 144px;
+  background-image: url(../image/photoshop-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .tool > li:nth-child(2) {
-  background-image: url(../images/skills_tool_2.png);
+  width: 148px;
+  height: 144px;
+  background-image: url(../image/illustraor-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .tool > li:nth-child(3) {
-  background-image: url(../images/skills_tool_3.png);
+  width: 250px;
+  height: 159px;
+  background-image: url(../image/indesign-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 13px -48px 0 -25px;
 }
 
 #skills > .tool > li:nth-child(4) {
-  background-image: url(../images/skills_tool_4.png);
+  width: 127px;
+  height: 144px;
+  background-image: url(../image/figma.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .tool > li:nth-child(5) {
-  background-image: url(../images/skills_tool_5.png);
+  width: 127px;
+  height: 144px;
+  background-image: url(../image/GA4-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #skills > .tool > li:nth-child(6) {
-  background-image: url(../images/skills_tool_6.png);
-}
-
-#skills > .tool > li:nth-child(7) {
-  background-image: url(../images/skills_tool_7.png);
-}
-
-/* section - portfolio + popup gallery*/
-#portfolio > .portfolio_bg {
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 300;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-#portfolio > .portfolio_bg > .portfolio_img {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  z-index: 310;
-  margin: -400px 0 0 -450px;
-  width: 900px;
-  height: 800px;
-  overflow-y: scroll;
-}
-
-#portfolio > .portfolio_bg > .portfolio_img > .viewClose {
-  display: block;
-  height: 4742px;
-  text-indent: -9999px;
-  background-color: #fff;
+  width: 127px;
+  height: 144px;
+  background-image: url(../image/TGM-icon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* section - portfolio */
 #portfolio {
-  width: 1200px;
+  max-width: 1920px;
   height: 960px;
   margin: 0 auto;
 }
@@ -463,17 +475,17 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #portfolio > .container > .mnu > li:after {
-  content: "|";
   display: block;
   margin: -25px 0 0 -10px;
+  content: "|";
   font-size: 12px;
   color: #ccc;
 }
 
 #portfolio > .container > .mnu > li > a {
   display: block;
-  padding: 0 10px;
   height: 40px;
+  padding: 0 10px;
   line-height: 40px;
   transition: all 0.4s;
 }
@@ -490,8 +502,8 @@ header > .container > nav > .gnb > li.on > a {
 
 #portfolio > .container > .view {
   position: relative;
-  width: 1200px;
-  height: 540px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #portfolio > .container > .view > li {
@@ -528,32 +540,36 @@ header > .container > nav > .gnb > li.on > a {
   top: 80px;
   width: 480px;
   height: 384px;
-  text-indent: -9999px;
-  background-image: url(../image/fortfolio-1.png);
+  background-image: url(../image/knotted-mockup.png);
   background-size: cover;
 }
 
+#portfolio > .container > .view > li > .view_img:hover {
+  transition: all ease 1s;
+  transform: scale(1.15);
+}
+
 #portfolio > .container > .view > li:nth-child(2) > .view_img {
-  background-image: url(../image/fortfolio-1.png);
+  background-image: url(../image/innuneco-mockup.png);
   background-size: cover;
 }
 
 #portfolio > .container > .view > li:nth-child(3) > .view_img {
-  background-image: url(../image/fortfolio-1.png);
+  background-image: url(../image/knotted-mockup.png);
   background-size: cover;
 }
 
 #portfolio > .container > .view > li:nth-child(4) > .view_img {
-  background-image: url(../image/fortfolio-1.png);
+  background-image: url(../image/innuneco-mockup.png);
   background-size: cover;
 }
 
 #portfolio > .container > .view > li > a {
-  float: left;
   display: block;
   width: 140px;
   height: 40px;
   margin: 100px 10px 0 0;
+  float: left;
   line-height: 40px;
   text-align: center;
   font-size: 16px;
@@ -561,7 +577,7 @@ header > .container > nav > .gnb > li.on > a {
   color: #425a73;
   background-color: #fff;
   border: 1px solid #425a73;
-  border-radius: 5px;
+  border-radius: 30px;
   transition: all 0.4s;
 }
 
@@ -571,254 +587,12 @@ header > .container > nav > .gnb > li.on > a {
   background-color: #425a73;
 }
 
-/* section - design */
-#design {
-  position: relative;
-  width: 1200px;
-  height: 960px;
-  margin: 0 auto;
-}
-
-#design > h2 {
-  margin-bottom: 20px;
-  padding-top: 200px;
-  font-size: 70px;
-  font-weight: 500;
-  color: #425a73;
-  letter-spacing: 1px;
-  text-align: center;
-}
-
-#design > .container {
-  position: relative;
-  overflow: hidden;
-  width: 990px;
-  height: 530px;
-  margin: 0 auto;
-}
-
-#design > .container > ul {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 2970px;
-  height: 530px;
-}
-
-#design > .container > ul > li {
-  float: left;
-  position: absolute;
-  top: 0;
-  left: 990px;
-  width: 990px;
-  height: 530px;
-  background-color: #fff;
-}
-
-#design > .container > ul > li > .gallery > li {
-  float: left;
-  text-align: center;
-  font-size: 22px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-#design > .container > ul > li:first-child {
-  left: 0;
-}
-
-#design > .container > ul > li > .web > li:nth-child(1) {
-  width: 380px;
-  height: 360px;
-  margin-right: 10px;
-  line-height: 360px;
-  background-image: url(../images/design_3_cardnews.jpg);
-}
-
-#design > .container > ul > li > .web > li:nth-child(2) {
-  width: 275px;
-  height: 360px;
-  margin-right: 10px;
-  line-height: 360px;
-  background-image: url(../images/design_3_eventpage.jpg);
-}
-
-#design > .container > ul > li > .web > li:nth-child(3) {
-  width: 315px;
-  height: 360px;
-  line-height: 360px;
-  background-image: url(../images/design_3_detailpage1.jpg);
-}
-
-#design > .container > ul > li > .web > li:nth-child(4) {
-  width: 665px;
-  height: 160px;
-  margin: 10px 10px 0 0;
-  line-height: 160px;
-  background-image: url(../images/design_3_banner.jpg);
-}
-
-#design > .container > ul > li > .web > li:nth-child(5) {
-  width: 315px;
-  height: 160px;
-  margin-top: 10px;
-  line-height: 160px;
-  background-image: url(../images/design_3_detailpage2.jpg);
-}
-
-#design > .container > ul > li > .major > li:nth-child(1) {
-  width: 370px;
-  height: 530px;
-  margin-right: 10px;
-  line-height: 360px;
-  background-image: url(../images/design_1_poster.jpg);
-}
-
-#design > .container > ul > li > .major > li:nth-child(2) {
-  width: 275px;
-  height: 282px;
-  margin-right: 10px;
-  line-height: 282px;
-  background-image: url(../images/design_1_CI.jpg);
-}
-
-#design > .container > ul > li > .major > li:nth-child(3) {
-  width: 325px;
-  height: 282px;
-  line-height: 282px;
-  background-image: url(../images/design_1_package.jpg);
-}
-
-#design > .container > ul > li > .major > li:nth-child(4) {
-  float: right;
-  width: 610px;
-  height: 238px;
-  margin-top: 10px;
-  line-height: 238px;
-  background-image: url(../images/design_1_web.jpg);
-}
-
-#design > .container > ul > li > .graphic > li:nth-child(1) {
-  width: 300px;
-  height: 260px;
-  margin-right: 10px;
-  line-height: 260px;
-  background-image: url(../images/design_2_package.jpg);
-}
-
-#design > .container > ul > li > .graphic > li:nth-child(2) {
-  width: 300px;
-  height: 260px;
-  margin-right: 10px;
-  line-height: 260px;
-  background-image: url(../images/design_2_infographic1.jpg);
-}
-
-#design > .container > ul > li > .graphic > li:nth-child(3) {
-  float: right;
-  width: 370px;
-  height: 530px;
-  line-height: 530px;
-  background-image: url(../images/design_2_infographic2.jpg);
-}
-
-#design > .container > ul > li > .graphic > li:nth-child(4) {
-  width: 300px;
-  height: 260px;
-  margin: 10px 10px 0 0;
-  line-height: 260px;
-  background-image: url(../images/design_2_pattern.jpg);
-}
-
-#design > .container > ul > li > .graphic > li:nth-child(5) {
-  width: 300px;
-  height: 260px;
-  margin: 10px 10px 0 0;
-  line-height: 260px;
-  background-image: url(../images/design_2_BI.jpg);
-}
-
-#design > .container > ul > li > .gallery > li > a {
-  display: block;
-  height: 100%;
-  text-indent: -9999px;
-}
-
-#design > .container > ul > li > .gallery > li:hover > a,
-#design > .container > ul > li > .gallery > li > a:focus {
-  text-indent: 0;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-#design > button {
-  position: absolute;
-  top: 50%;
-  margin-top: 80px;
-  outline: none;
-  border: none;
-  background: none;
-  width: 21px;
-  height: 41px;
-  text-indent: -9999px;
-  background-image: url(../images/sprite.png);
-}
-
-#design > .prev {
-  left: 70px;
-  background-position: 0 0;
-}
-
-#design > .next {
-  right: 70px;
-  background-position: -31px 0;
-}
-
-#design > .prev:hover,
-#design > .prev.on {
-  background-position: 0 -42px;
-}
-
-#design > .next:hover,
-#design > .next.on {
-  background-position: -31px -42px;
-}
-
-/* section - design + popup gallery*/
-#design > .gallery_bg {
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 400;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-#design > .gallery_bg > .gallery_img {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  z-index: 410;
-  margin: -375px 0 0 -500px;
-  width: 1000px;
-  height: 750px;
-  background-color: #fff;
-}
-
-#design > .gallery_bg > .gallery_img > .gallClose {
-  display: block;
-  height: 750px;
-  text-indent: -9999px;
-}
-
 /* section - contact */
 #contact {
-  position: relative;
-  overflow: hidden;
   width: 100%;
   height: 860px;
+  position: relative;
+  overflow: hidden;
 }
 
 #contact > h2 {
@@ -835,13 +609,13 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #contact > .contact_img {
+  width: 800px;
+  height: 375px;
   position: absolute;
   right: 50%;
   top: 300px;
   margin-right: -985px;
-  width: 800px;
-  height: 375px;
-  background: url(../image/about-me2.png) no-repeat;
+  background: url(../image/myprofile2.jpg) no-repeat;
   background-size: contain;
 }
 
@@ -861,8 +635,8 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #contact > .container > p + p:before {
-  content: "/";
   display: block;
+  content: "/";
   padding: 20px 0;
   font-weight: 300;
   font-size: 30px;
@@ -876,13 +650,12 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 #contact > .container > .link {
+  display: flex;
   width: 394px;
   margin: 0 auto;
 }
 
 #contact > .container > .link > a {
-  display: block;
-  float: left;
   height: 40px;
   line-height: 40px;
   color: #425a73;
@@ -891,13 +664,13 @@ header > .container > nav > .gnb > li.on > a {
   transition: all 0.4s;
 }
 
-#contact > .container > .link > a.fileOpen {
-  width: 240px;
+#contact > .container > .link > a.notion {
+  width: 50%;
   margin-right: 10px;
 }
 
 #contact > .container > .link > a.git {
-  width: 140px;
+  width: 50%;
 }
 
 #contact > .container > .link > a:hover,
