--- a/css/style.css
+++ b/css/style.css
@@ -27,21 +27,16 @@ header {
 }
 
 header > .container > nav {
-  width: 1200px;
-  height: 60px;
-  position: absolute;
-  left: 50%;
-  top: 0;
-  margin-left: -600px;
+  display: flex;
+  justify-content: space-around;
 }
 
 header > .container > nav > .gnb > li {
-  width: 228px;
   float: left;
+  margin-right: 120px;
 }
 
 header > .container > nav > .gnb > li > a {
-  display: block;
   height: 60px;
   line-height: 60px;
   font-size: 20px;
@@ -319,7 +314,6 @@ header > .container > nav > .gnb > li.on > a {
 #skills > .skill > li:nth-child(1) {
   width: 155px;
   height: 144px;
-  transform: scale(1.2);
   background-image: url(../image/GA4-icon.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -575,6 +569,32 @@ header > .container > nav > .gnb > li.on > a {
   color: #fff;
   background-color: #425a73;
 }
+
+/* section - experience */
+#experience {
+  width: 100%;
+  height: 860px;
+  position: relative;
+  overflow: hidden;
+}
+
+#experience > h2 {
+  position: relative;
+  text-align: center;
+  top: 200px;
+  font-size: 70px;
+  font-weight: 500;
+  color: #425a73;
+  letter-spacing: 1px;
+}
+
+
+
+
+
+
+
+
 
 /* section - contact */
 #contact {
