--- a/css/style.css
+++ b/css/style.css
@@ -571,14 +571,14 @@ header > .container > nav > .gnb > li.on > a {
 }
 
 /* section - experience */
-#experience {
+#experiences {
   width: 100%;
   height: 860px;
   position: relative;
   overflow: hidden;
 }
 
-#experience > h2 {
+#experiences > h2 {
   position: relative;
   text-align: center;
   top: 200px;
@@ -588,13 +588,25 @@ header > .container > nav > .gnb > li.on > a {
   letter-spacing: 1px;
 }
 
+#experiences > .experiences-wrap {
+  di
+}
 
+#experiences > .experiences-wrap > .box {
+}
 
+#experiences > .experiences-wrap > .box > .detail {
+}
 
+#experiences > .experiences-wrap > .box > .detail > h3 {
+}
 
+#experiences > .experiences-wrap > .box > .detail > span {
+}
 
-
-
+#experiences > .experiences-wrap > .box:nth-child(1) {
+  background: url(../image/experience-travel.jpeg);
+}
 
 /* section - contact */
 #contact {
